examples/coredns/gateways.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: external-na
  namespace: kuadrant-coredns-1
  labels:
    coredns: demo
spec:
  gatewayClassName: istio
  listeners:
    - name: t1a
      allowedRoutes:
        namespaces:
          from: All
      port: 80
      hostname: 'k.example.com'
      protocol: HTTP
---
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: external-eu
  namespace: kuadrant-coredns-2
  labels:
    coredns: demo
spec:
  gatewayClassName: istio
  listeners:
    - name: t1a
      allowedRoutes:
        namespaces:
          from: All
      port: 80
      hostname: 'k.example.com'
      protocol: HTTP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: toystore
  labels:
    app: toystore
    coredns: demo
spec:
  parentRefs:
    - name: external-na
      namespace: kuadrant-coredns-1
    - name: external-eu
      namespace: kuadrant-coredns-2
  hostnames: ['k.example.com']
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: '/'
          method: GET
        - path:
            type: Exact
            value: '/admin/toy'
          method: POST
        - path:
            type: Exact
            value: '/admin/toy'
          method: DELETE
        - path:
            type: Exact
            value: '/health'
          method: GET
      backendRefs:
        - name: toystore
          port: 80
